--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ button:hover img {
     position:absolute;
     width:555px;
     height:987px;   
-    background-image: url("https://i.ibb.co/CK5H2xyQ/Base.png");
+    background-image: url("https://i.ibb.co/BFCQd3p/Base-fix.png");
 }
 
 #shoes{
