--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ button:hover img {
     position:absolute;
     width:555px;
     height:987px;
-    background-image: url("https://i.ibb.co/HfgjTqpn/Acc1.png");
+    background-image: url("https://i.ibb.co/gF6qL884/Acc1.png");
 }
 
 .hairfront2{
